--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ top.location.href='you-shall.html';
         <div id="cv-left-slider">
             <!-- 1. SLIDE -->
             <div>
-                <img src="images/photos/img.jpg" alt="">
+                <img src="images/photos/home1.png" alt="">
                 <div id="home-slide-title">
                     <span>JONATAS</span>
                 </div>
@@ -445,7 +445,7 @@ top.location.href='you-shall.html';
     <script type="text/javascript">
         jQuery(document).ready(function() {
             "use strict";
-            jQuery('#home-image').backstretch("images/photos/img2.jpg");
+            jQuery('#home-image').backstretch("images/photos/home2.png");
         });
     </script>
     <!-- PORTFOLIO -->
