--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ top.location.href='you-shall.html';
                 </div>
             </div>
             <!-- 2. SLIDE -->
-            <img src="images/photos/teste.jpg" alt="">
+            <img src="images/photos/about.jpg" alt="">
             <!-- 3. SLIDE -->
             <img src="images/photos/tentativa.jpg" alt="">
             <!-- 4. SLIDE -->
