--- a/index.html
+++ b/index.html
@@ -89,12 +89,8 @@ top.location.href='you-shall.html';
             <!-- 4. SLIDE -->
             <img src="images/photos/portfolio.jpg" alt="">
             <!-- 5. SLIDE -->
-            <div>
-                <!-- GOOGLE MAP -->
-                <div class="google-map-container">
-                    <div id="google-map"></div>
-                </div>
-            </div>
+            <img src="images/photos/contact4.jpg" alt="">
+            
         </div>
     </div>
     <!-- PAGES -->
@@ -403,8 +399,8 @@ top.location.href='you-shall.html';
         <!-- PAGE 5 -->
         <section class="floor floor-5">
             <!-- MOBILE GOOGLE MAP -->
-            <div class="mobile-map-container">
-                <div id="mobile-map"></div>
+            <div class="img-mobile-only">
+                <img src="images/photos/contact4_small.jpg" alt="" />
             </div>
             <!-- PAGE CONTENT -->
             <div class="cv-page-content">
