--- a/site_englishversion.html
+++ b/site_englishversion.html
@@ -101,7 +101,7 @@ top.location.href='you-shall.html';
                 <div id="home-title">
                     <h1><span class="mobile-title">JONATAS</span><span>VARELLA</span></h1>
                     <p> 
-                    	<a href="" style="color: #000000" class="typewrite" data-period="2000" data-type='[ "Mestrando em Ciência Política","Metodólogo","Cientista de Dados", "Gestor Público", "Analytics Consultor"]'>
+                    	<a href="" style="color: #000000" class="typewrite" data-period="2000" data-type='[ "Political Scientist Student.","Methodologist","Data Scientist.", "Public Management.", "Analytics Consultant."]'>
                     	<span class="wrap"></span>
                     	</a>
                     </p>
@@ -135,29 +135,29 @@ top.location.href='you-shall.html';
             </div>
             <!-- PAGE CONTENT -->
             <div class="cv-page-content">
-                <h2 class="border">SOBRE</h2>
-                <p>Mestrando em Ciência Política e Pesquisador no Centro de Estudo Legislativo (CEL) na Universidade Federal de Minas Gerais (UFMG), metodólogo junior na Quaest Consultoria e Pesquisa e especialista em análise de dados de survey.</p>
+                <h2 class="border">ABOUT</h2>
+                <p>Master in Political Science at the Federal University of Minas Gerais (UFMG), junior methodologist at Quaest Consultoria e Pesquisa and specialist in survey data analysis.</p>
                 <!-- TABLE -->
                 <ul class="cv-table">
                     <li>
-                        <div class="cv-table-left"><i class="cv-icon fa fa-user"></i>Data de nascimento</div>
-                        <div class="cv-table-right"> 28, de Abril de 1995</div>
+                        <div class="cv-table-left"><i class="cv-icon fa fa-user"></i>Date of birth</div>
+                        <div class="cv-table-right"> April 28, 1995</div>
                     </li>
                     <li>
                         <div class="cv-table-left"><i class="cv-icon fa fa-language"></i>Language</div>
-                        <div class="cv-table-right">Portuguese (Nativo), English (B2)</div>
+                        <div class="cv-table-right">Portuguese (Native), English (B2)</div>
                     </li>
                     <li>
                         <div class="cv-table-left"><i class="cv-icon fa fa-futbol-o"></i>Hobbies</div>
-                        <div class="cv-table-right">Política, Futebol, Coding, Rstats</div>
+                        <div class="cv-table-right">Politics, Soccer, Movies</div>
                     </li>
                     <li>
                         <div class="cv-table-left"><i class="cv-icon fa fa-external-link-square"></i>Website</div>
-                        <div class="cv-table-right"><a href="http://jonatasvarella.com">www.jonatasvarella.github.io</a>
+                        <div class="cv-table-right"><a href="http://jonatasvarella.com">www.jonatasvarella.com</a>
                         </div>
                     </li>
                 </ul>
-                <a href="#contact" class="cv-button primary go-to-floor" data-id="5" data-slug="contact">Entre em contato</a>
+                <a href="#contact" class="cv-button primary go-to-floor" data-id="5" data-slug="contact">Hire me</a>
                 <!-- <a href="#" class="cv-button">Download Resume</a> -->
                 <hr/>
                 <h2 class="border">Skills</h2>
@@ -168,18 +168,18 @@ top.location.href='you-shall.html';
                             <a href="#" class="fa fa-bar-chart">DataScience</a>
                         </div>
                         <div class="cv-icon-text">
-                            <h4>Ciência de Dados</h4>
-                            <p>Analytics; Machine learning; Big data; Data Intelligence; Programação: R, Python.;</p>
+                            <h4>Data Science</h4>
+                            <p>Analytics; Machine learning; Big data; Data Intelligence; Structured programming: R, Python.;</p>
                         </div>
                     </div>
                     <!-- ICON BLOCK -->
                     <div class="cv-icon-block">
                         <div class="cv-icon-container">
-                            <a href="#" class="fa fa-users" aria-hidden="true" >Pesquisa</a>
+                            <a href="#" class="fa fa-users" aria-hidden="true" >Research</a>
                         </div>
                         <div class="cv-icon-text">
                             <h4>Research</h4>
-                            <p>Pesquisa de opinião; Pesquisa de mercado; Análise de dados</p>
+                            <p>Opinion Research; Market Research; Focal Group;</p>
                         </div>
                     </div>
                     <!-- ICON BLOCK -->
@@ -188,7 +188,7 @@ top.location.href='you-shall.html';
                             <a href="#" class="fa fa-dot-circle-o" aria-hidden="true" >Linux</a>
                         </div>
                         <div class="cv-icon-text">
-                            <h4>Políticas Públicas</h4>
+                            <h4>Public Policies</h4>
                             <p>Avaliação e monitoramento de políticas públicas; Consultoria de gestão e estratégia governamental.</p>
                         </div>
                     </div>
@@ -199,7 +199,7 @@ top.location.href='you-shall.html';
                         </div>
                         <div class="cv-icon-text">
                             <h4>Marketing</h4>
-                            <p>Estatística para Marketing; Estratégia digital; Marketing Político</p>
+                            <p>Estatística para Marketing; Estratégia digital; </p>
                         </div>
                     </div>
                 
@@ -214,24 +214,28 @@ top.location.href='you-shall.html';
             </div>
             <!-- PAGE CONTENT -->
             <div class="cv-page-content">
-                <h2 class="border">Educação</h2>
+                <h2 class="border">EDUCATION</h2>
                 <div class="cv-resume-box">
                     <div class="cv-resume-title">
                         <h5>Universidade Federal de Minas Gerais</h5>
-                        <p>Mestrado em Ciência Política | 2019-Presente</p>
+                        <p>Masters in Political Science | 2019-Present</p>
                     </div>
-                    <p>A pós-graduação stricto sensu em Ciência Política da UFMG é a mais antiga do país, tendo iniciado suas atividades em 1966, com a criação do curso de mestrado. Plenamente consolidado e considerado como de excelência pela Capes, o Programa de Pós-graduação em Ciência Política (PPGCP) tem dado importante contribuição para a produção científica na disciplina, destacando-se por sua inserção em redes internacionais, pela pluralidade de grupos de pesquisa e pela sua centralidade nos debates da ciência política brasileira. <a> http://www.fafich.ufmg.br/ppgcp/ </a> </p>
+                    <p>UFMG’s graduate program in Political Science is the oldest in the country, dating back to 1966 with the creation of the master’s degree program. Fully consolidated and considered excellent by CAPES (Brazilian Federal Agency for Support and Evaluation of Graduate Education), the Graduate Program in Political Science (PPGCP) has made important contributions to scientific production, setting itself apart from other like programs because of its insertion in international networks, plurality of research groups, and its relevance to Brazil’s political science debate. <a> http://www.fafich.ufmg.br/ppgcp/ </a> </p>
                 </div>
                 <div class="cv-resume-box">
                     <div class="cv-resume-title">
                         <h5>Universidade Federal de Minas Gerais</h5>
                         <p>Gestão Pública | 2013-2018</p>
                     </div>
-                    <p>O curso de graduação em Gestão Pública recrutou sua primeira turma no Vestibular de 2009. É um curso noturno, com duas entradas anuais, que resultou da adesão da UFMG ao Plano de Reestruturação e Expansão das Universidades (Reuni). A maior parte das disciplinas que compõe sua grade curricular é ministrada por professores dos departamentos de Ciência Política, Economia e Sociologia. <a> http://www.fafich.ufmg.br/gestaopublica/ </a> </p>
+                    <p>The undergraduate course in Public Management trains professionals to occupy strategic positions 
+                        in public interest institutions and at the same time offers solid basic training and flexibility
+                         so that the student directs their training according to their interests within the public
+                          management. Most of the subjects that make up its curriculum are taught by professors from the 
+                          departments of Political Science, Economics and Sociology. <a> http://www.fafich.ufmg.br/gestaopublica/ </a> </p>
                 </div>
                 <hr/>
                 <h2 class="border">SKILLS</h2>
-                <p>Algumas de minhas habilidades</p>
+                <p>These are some of my skills.</p>
                 <!-- SKILL BARS -->
                 <div class="skills">
                 	<div class="skillbar" data-percent="90%">
@@ -277,59 +281,53 @@ top.location.href='you-shall.html';
                     <!-- End Skill Bars -->
                 </div>
                 <hr/>
-                <h2 class="border">Experiência</h2>
+                <h2 class="border">EXPERIENCE</h2>
                 <div class="cv-resume-box">
                     <div class="cv-resume-title">
-                        <h5>Metodólogo Júnior - Quaest Consultoria e Pesquisa</h5>
-                        <p>2020 - presente</p>
+                        <h5>Junior Methodologist - Quaest Consultoria e Pesquisa</h5>
+                        <p>2020</p>
                     </div>
-                    <p> Cientista de dados, trabalhando com processamento e análise de dados de survey; Big Data; Machine Learning e inovação.</p>
-                </div>
-                <div class="cv-resume-box">
-                    <div class="cv-resume-title">
-                        <h5>Pesquisador Científico - Centro de Estudo Legislativo (CEL) </h5>
-                        <p>2019 - presente</p>
-                    </div>
-                    <p> Pesquisador no Centro de Estudo Legislativo da UFMG. Atualmente, integrando a equipe do projeto: "Elite parlamentares".</p>
+                    <p>Data scientist, working with survey data analysis, big data, machine learning and innovation.</p>
                 </div>
                 <div class="cv-resume-box">
                     <div class="cv-resume-title">
                         <h5>Research Assistant - Quaest Consultoria e Pesquisa</h5>
                         <p>2018 - 2019</p>
                     </div>
-                    <p> Analista de dados, atuando no processamento e na análise de dados de survey. </p>
+                    <p>Technical analyst. Acting in the phases of data processing and analysis.</p>
                 </div>
                 <div class="cv-resume-box">
                         <div class="cv-resume-title">
                             <h5>Head of Marketing - Quaest Consultoria e Pesquisa</h5>
                             <p>2019 - 2019</p>
                         </div>
-                        <p>Responsável pela estratégia de marketing digital</p>
+                        <p>Responsible for digital marketing strategy</p>
                 </div>
                 <div class="cv-resume-box">
                         <div class="cv-resume-title">
-                            <h5>Estagiário - Secretaria de Estado de Esporte de Minas Gerais</h5>
+                            <h5>Trainee - Secretaria de Estado de Esporte de Minas Gerais</h5>
                             <p>2016 - 2017</p>
                         </div>
-                        <p> Analista de política pública na Diretoria de fomento e organização de políticas públicas de esporte.</p>
+                        <p>Analyst of public policies by the Direction of Promotion and Organization of Sports Policies.</p>
                 </div>
                 <div class="cv-resume-box">
                         <div class="cv-resume-title">
-                            <h5>Assistente de Pesquisa Científica Universidade Federal de Minas Gerais</h5>
+                            <h5>Academy Research Assistant - Universidade Federal de Minas Gerais</h5>
                             <p>2015 - 2016</p>
                         </div>
-                        <p> Estagiário no projeto de extensão que desenvolveu o sistema de monitoramento e avaliação
-                        para as políticas “Programa Esporte e Lazer na Cidade” e “Vida Saudável” do Ministério do Esporte.</p>
+                        <p>Trainee in the extension project that developed the monitoring and evaluation
+                             system for the "Sports and Leisure in the City" and "Healthy Life" policies of the Ministry of Sports.</p>
                 </div>
                 <div class="cv-resume-box">
                         <div class="cv-resume-title">
-                            <h5>Estagiário - Unidade de Pronto Atendimento (UPA-Pampulha)</h5>
+                            <h5>Trainee - Unidade de Pronto Atendimento (UPA-Pampulha)</h5>
                             <p>2013 - 2015</p>
                         </div>
-                        <p>Estagiário por dois anos na unidade UPA PAMPULHA, através do programa “Amigos da Saúde:PossoAjudar?” entre 2013 e 2015. Fiz parte do Colegiado gestor da unidade, no qual atuei cerca de um ano.</p>
+                        <p>Trainee for two years through the program "Friends of Health: Can I Help?".
+                             I was part of the Management Collegiate of the unit, where I worked for about a year.</p>
                 </div>
                 <hr/>
-                <!-- <h2 class="border">COURSES</h2>
+                <h2 class="border">COURSES</h2>
                 <div class="cv-resume-box">
                     <div class="cv-resume-title">
                         <h5>Data Intelligence</h5>
@@ -352,7 +350,7 @@ top.location.href='you-shall.html';
                              system for the "Sports and Leisure in the City" and "Healthy Life" policies of the Ministry of Sports.</p>
                 </div>
                 <hr/>
-            </div> -->
+            </div>
         </section>
         <!-- PAGE 4 -->
         <section class="floor floor-4">
@@ -367,7 +365,7 @@ top.location.href='you-shall.html';
                 <ul id="cv-portfolio-filter" class="cvfilters">
                     <li data-filter="all" class="gridactive">All</li>
                     <li data-filter="ufmg">Blog</li>
-                    <li data-filter="courses">Cursos</li>
+                    <li data-filter="courses">Courses</li>
                 </ul>
                 <div class="clear"></div>
                 <!-- PORTFOLIO GRID -->
@@ -411,7 +409,7 @@ top.location.href='you-shall.html';
             </div>
             <!-- PAGE CONTENT -->
             <div class="cv-page-content">
-                <h2 class="border">Contato</h2>
+                <h2 class="border">CONTACT</h2>
                 <!-- TABLE -->
                 <ul class="cv-table">
                     <li>
