--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@ top.location.href='you-shall.html';
     <noscript>
         <link href="css/nojs.css" rel="stylesheet" type="text/css">
     </noscript>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159728215-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159728215-1');
+</script>
+
 </head>
 
 <!-- oncontextmenu='return false' onselectstart='return false' ondragstart='return false' -->
