--- a/index.html
+++ b/index.html
@@ -400,7 +400,18 @@ top.location.href='you-shall.html';
                                 <img src="images/photos/multivariada.png" alt="" />
                             </a>
                             <figcaption>
-                                <div class="cvgrid-title">Curso de análise multivariada</div>
+                                <div class="cvgrid-title">Análise multivariada</div>
+                            </figcaption>
+                        </figure>
+                    </li>
+
+                    <li data-filter-class='["all","ufmg","courses"]'>
+                        <figure>
+                            <a href="https://github.com/jonatasvarella/Introd_R" target="_blank" class="_blank">
+                                <img src="images/photos/introd_r.png" alt="" />
+                            </a>
+                            <figcaption>
+                                <div class="cvgrid-title">Introdução ao R</div>
                             </figcaption>
                         </figure>
                     </li>
