--- a/index.html
+++ b/index.html
@@ -383,6 +383,17 @@ top.location.href='you-shall.html';
                 <!-- PORTFOLIO GRID -->
                 <ul id="cv-portfolio" class="cvgrid">
 
+                	<li data-filter-class='["all","ufmg"]'>
+                        <figure>
+                            <a href="https://www.jota.info/opiniao-e-analise/colunas/quaest-opiniao/qual-partido-e-mais-popular-nas-redes-19022020" target="_blank" class="_blank">
+                                <img src="images/photos/jota1.png" alt="" />
+                            </a>
+                            <figcaption>
+                                <div class="cvgrid-title">Qual partido é mais popular nas redes?</div>
+                            </figcaption>
+                        </figure>
+                    </li>
+
                     <li data-filter-class='["all","ufmg"]'>
                         <figure>
                             <a href="https://medium.com/@jonatasvarellacb" target="_blank" class="_blank">
