--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ top.location.href='you-shall.html';
             <!-- PAGE CONTENT -->
             <div class="cv-page-content">
                 <h2 class="border">SOBRE</h2>
-                <p>Mestrando em Ciência Política e Pesquisador no Centro de Estudo Legislativo <a href="https://www.centroestudoslegislativos.com.br/">(CEL)</a> na Universidade Federal de Minas Gerais (UFMG), metodólogo junior na <a href="https://www.quaest.com.br/">Quaest Pesquisa e Consultoria</a> e especialista em análise de dados de survey.</p>
+                <p>Mestrando em Ciência Política e Pesquisador no Centro de Estudo Legislativo <a href="https://www.centroestudoslegislativos.com.br/">(CEL)</a> na Universidade Federal de Minas Gerais (UFMG), metodólogo na <a href="https://www.quaest.com.br/">Quaest Pesquisa e Consultoria</a> e especialista em análise de dados de survey.</p>
                 <!-- TABLE -->
                 <ul class="cv-table">
                     <li>
