--- a/index.html
+++ b/index.html
@@ -383,6 +383,17 @@ top.location.href='you-shall.html';
                 <!-- PORTFOLIO GRID -->
                 <ul id="cv-portfolio" class="cvgrid">
 
+                	 <li data-filter-class='["all","ufmg"]'>
+                        <figure>
+                            <a href="https://www.jota.info/opiniao-e-analise/colunas/quaest-opiniao/as-raizes-do-bolsonarismo-e-sua-transformacao-13052020" target="_blank" class="_blank">
+                                <img src="images/photos/jota2.jpeg" alt="" />
+                            </a>
+                            <figcaption>
+                                <div class="cvgrid-title">As raízes do Bolsonarismo e sua transformação</div>
+                            </figcaption>
+                        </figure>
+                    </li>
+
                 	<li data-filter-class='["all","ufmg"]'>
                         <figure>
                             <a href="https://www.jota.info/opiniao-e-analise/colunas/quaest-opiniao/como-manter-sua-base-coesa-15042020" target="_blank" class="_blank">
