--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ top.location.href='you-shall.html';
                 <h2 class="border">Experiência</h2>
                 <div class="cv-resume-box">
                     <div class="cv-resume-title">
-                        <h5>Metodólogo Júnior - Quaest Consultoria e Pesquisa</h5>
+                        <h5>Metodólogo - Quaest Consultoria e Pesquisa</h5>
                         <p>2020 - presente</p>
                     </div>
                     <p> Cientista de dados, trabalhando com processamento e análise de dados de survey; Big Data; Machine Learning e inovação.</p>
